--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     <h2 style="text-align:center;">Friends 💙</h2>
     <p style="text-align:center;">Here are some of my amazing friends! Check out their sites below:</p>
     <div class="friends-list">
-      <a href="https://friend1website.com" target="_blank">Mylen Villa</a>
+      <a href="https://mylenvilla.netlify.app/" target="_blank">Mylen Villa</a>
       <a href="https://friend2website.com" target="_blank">Laica Balogo</a>
-      <a href="https://friend3website.com" target="_blank">Jhonna Mae Santander</a>
+      <a href="https://jhonaswebsite.netlify.app/" target="_blank">Jhonna Mae Santander</a>
     </div>
   </section>
 
