--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
   </nav>
 
   <section id="about">
-    <img src="https://i.ibb.co/0pxt3pJd/c55f5541a2c33be9a3ce514cbc39c493.jpg" alt="c55f5541a2c33be9a3ce514cbc39c493" border="0" class="profile-pic"</a>
-    <h2 style="text-align:center;">About Me 💚</h2>
+    <img src="https://i.ibb.co/Vcns1CFm/IMG20251121100645.jpg" alt="IMG20251121100645" border="0" class="profile-pic"</a>
     <p style="text-align:center; max-width: 700px; margin: 0 auto;">
       Hi! I’m <strong>Mavel</strong>, a 21-year-old artist who loves to draw and explore creative ideas. I enjoy turning my imagination into colorful illustrations that brings joy, emotion, and stories to life. When I’m not sketching, I love listening to music, enjoying nature, and learning new art techniques to improve my craft. <br><br/>
       I’m currently studying at Northern Iloilo State niversity (NISU) as a 4th-year BSIT student majoring in Web Development. Being an artist and a tech student has inspired me to blend creativity with digital design, allowing me to build visually appealing and meaningful projects. This little website is my personal space to share my artworks and connect with friends!
